--- a/LexShop.WebUI/Views/ProductManager/Edit.cshtml
+++ b/LexShop.WebUI/Views/ProductManager/Edit.cshtml
@@ -15,9 +15,9 @@
         <h4>Product</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        @Html.HiddenFor(model => model.ID)
+        @Html.HiddenFor(model => model.Product.ID)
         <div class="col-md-2">
-            <img class="img-responsive" src="~/Content/ProductImages/.@Model.Product.Image" />
+            <img class="img-responsive" src="~/Content/ProductImages/@Model.Product.Image" />
         </div>
         <div class="col-md-10">
             <div class="form-group">
@@ -47,8 +47,7 @@
             <div class="form-group">
                 @Html.LabelFor(model => model.Product.Category, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
-                    @Html.EditorFor(model => model.Product.Category, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.Product.Category, "", new { @class = "text-danger" })
+                    @Html.DropDownListFor(model => model.Product.Category, new SelectList(Model.ProductCategories, "Category", "Category"), new { htmlAttributes = new { @class = "form-control" } })
                 </div>
             </div>
 
