first aprox. to having a basket

--- a/LexShop.WebUI/Views/Home/Index.cshtml
+++ b/LexShop.WebUI/Views/Home/Index.cshtml
@@ -35,6 +35,7 @@
                     <p>@item.Price</p>
                 </div>
                 <div>
+                    @Html.ActionLink("Add to Basket", "Index", "Basket")
                     <a href="#" class="btn btn-default">Add to Basket</a>
                 </div>
             </div>
