--- a/LexShop.WebUI/Views/Home/Details.cshtml
+++ b/LexShop.WebUI/Views/Home/Details.cshtml
@@ -37,7 +37,7 @@
                 &nbsp;
             </dt>
             <dd>
-                <a href="#" class="btn btn-default">Add to Basket</a>
+                <a href="@Url.Action("AddToBasket","Basket", new { id=Model.ID })" class="btn btn-default">Add to Basket</a>
             </dd>
             <dt>
                 &nbsp;
